handle workflow auth
