# app/Http/Requests/Api/User/RegisterPersonalRequest.php
@@ -12,7 +12,7 @@ use OpenApi\Attributes as OA;
 #[OA\Schema(
     schema: "RegisterPersonal",
     title: "RegisterPersonal",
-    required: ["birth_date", "gender", "blood_type"],
+    required: ["birth_date", "gender", "blood_type","dialysis_start_date", "dialysis_type", "sessions_per_week"],
     properties: [
         new OA\Property(
             property: "birth_date",
@@ -32,6 +32,33 @@ use OpenApi\Attributes as OA;
             type: "string",
             enum: ["A+", "A-", "B+", "B-", "AB+", "AB-", "O+", "O-"]
         ),
+        new OA\Property(
+            property: "dialysis_start_date",
+            description: "dialysis start date",
+            type: "string",
+            format: "date"
+        ),
+        new OA\Property(
+            property: "dialysis_type",
+            description: " disease type",
+            type: "string",
+            enum: ["hemodialysis", "peritoneal"]
+        ),
+        new OA\Property(
+            property: "sessions_per_week",
+            description: "number sessions per week",
+            type: "number",
+        ),
+        new OA\Property(
+            property: "center_id",
+            description: "send center  id ",
+            type: "number",
+        ),
+        new OA\Property(
+            property: "doctor_id",
+            description: "send doctor  id ",
+            type: "number",
+        ),
     ]
 )]
 class RegisterPersonalRequest extends FormRequest
@@ -50,9 +77,15 @@ class RegisterPersonalRequest extends FormRequest
     public function rules()
     {
         return [
-            'birth_date' => ['required', 'date','before:today'],
-            'gender'     => ['required', Rule::in(["male","female"])],
-            'blood_type' => ['required', Rule::in(["A+","A-","B+","B-","AB+","AB-","O+","O-"])],
+            'birth_date'          => ['required', 'date','before:today'],
+            'gender'              => ['required', Rule::in(["male","female"])],
+            'blood_type'          => ['required', Rule::in(["A+","A-","B+","B-","AB+","AB-","O+","O-"])],
+            'dialysis_start_date' => ['required', 'date', 'before_or_equal:today'],
+            'dialysis_type'       => ['required', Rule::in(['hemodialysis', 'peritoneal']),],
+            'sessions_per_week'   => ['required', 'integer', 'min:1', 'max:7',],
+            'center_id'           => ['required',Rule::exists('dialysis_centers','id')],
+            'doctor_id'           => ['required',Rule::exists('doctors','id')],
+
         ];
     }
 
